fixed alignment of name at top

--- a/src/App/style.css
+++ b/src/App/style.css
@@ -1848,7 +1848,7 @@ html {
 
   strong {
     margin-right: 5%;
-    margin-bottom: -1%;
+    margin-bottom: -1.2%;
   }
 
   #my-name {
